--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 
 
 .container {
-  max-width: 1200px;
+  max-width: 1170px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -41,11 +41,9 @@ body {
 /* Header */
 .header {
   padding-top: 28px;
-  padding-bottom: 28px;
   background-color: #666666;
   background-image: url(../images/banner-bg.jpg);
   background-repeat: no-repeat;
-  background-position: center center;
   background-size: cover;
   position: relative;
   z-index: 0;
@@ -110,7 +108,7 @@ body {
   text-align: center;
   max-width: 720px;
   margin: auto;
-  padding: 118px 0;
+  padding: 100px 0 130px;
 }
 
 .header-title {
@@ -118,7 +116,7 @@ body {
   font-size: 45px;
   color: #ffffff;
   text-transform: uppercase;
-  line-height: 1.55em;
+  line-height: 1.6em;
 }
 
 /* Trends */
@@ -137,7 +135,7 @@ body {
   content: "";
   display: block;
   width: 66px;
-  margin: 14px auto;
+  margin: 7px auto;
   border-bottom: 3px solid #b59f5b;
 }
 .trends {
@@ -199,7 +197,7 @@ body {
 .trend-content {
   width: 100%;
   box-sizing: border-box;
-  padding: 34px;
+  padding: 30px;
   border: 3px solid #b59f5b;
   margin-left: 22px;
   margin-right: 22px;
@@ -208,14 +206,14 @@ body {
 .trend-tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 18px;
+  gap: 14px;
   text-transform: uppercase;
   color: #b59f5b;
   font-size: 14px;
   font-weight: 700;
   padding-left: 0;
   margin-top: 0;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 .trend-tag {
@@ -241,7 +239,7 @@ body {
 
 .content {
   margin-top: 64px;
-  margin-bottom: 64px;
+  margin-bottom: 57px;
   display: flex;
   justify-content: space-between;
  /* gap: 35px; */
@@ -254,7 +252,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 55px;
 }
 
 .post {
@@ -296,8 +294,8 @@ body {
 
 .post-title {
   text-transform: uppercase;
-  margin-top: 12px;
-  margin-bottom: 35px;
+  margin-top: 0;
+  margin-bottom: 25px;
   font-size: 20px;
 }
 
@@ -312,9 +310,9 @@ body {
 
 .data-author {
   display: flex;
-  gap: 15px;
+  gap: 8px;
   font-size: 12px;
-  margin-bottom: 51px;
+  margin-bottom: 45px;
 }
 .data {
   color: #888888;
@@ -326,7 +324,7 @@ body {
 
 .post-text {
   font-size: 15px;
-  /* line-height: ; */
+  line-height: 1.5em;
 }
 /* Main-sidebar */
 
@@ -335,7 +333,7 @@ body {
   margin-left: 125px;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 56px;
 }
 
 .aside-title {
@@ -350,7 +348,7 @@ body {
   content: "";
   display: block;
   width: 66px;
-  margin: 14px auto;
+  margin: 7px auto;
   border-bottom: 3px solid #b59f5b;
 }
 
@@ -365,19 +363,27 @@ body {
   width: 272px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .latest-post {
   display: flex;
   gap: 20px;
+  margin-top: 21px;
 }
 
 .latest-post-picture {
   width: 70px;
   height: 70px;
-  padding: 4px 0 4px 0;
+  padding: 0;
   margin: 0;
+}
+
+.latest-post-frame {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .latest-post-heading {
@@ -398,7 +404,7 @@ body {
 /* блок найти */
 
 .form-search {
-  margin-top: 60px;
+  margin-top: 62px;
   display: flex;
 }
 .search-field {
@@ -408,10 +414,8 @@ body {
 
 .field {
   box-sizing: border-box;
-  
-  height: 48px;
   background-color: #f4f7f6;
-  padding: 18px 18px 20px 18px;
+  padding: 15px 20px;
   border: 0;
   font-size: 13px;
   flex-grow: 1;
@@ -424,8 +428,8 @@ body {
 
 .button-search {
   box-sizing: border-box;
-  width: 48px;
-  height: 48px;
+  width: 56px;
+  height: 50px;
   background-color: #b59f5b;
   border: 0;
   background-image: url(../svg/search.svg);
@@ -443,16 +447,15 @@ body {
 .subscribe {
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 20px;
   text-align: center;
 }
 
 .subscribe-field {
   box-sizing: border-box;
   width: 100%;
-  height: 48px;
   background-color: #f4f7f6;
-  padding: 18px;
+  padding: 13px 20px;
   border: 0;
   font-size: 13px;
 }
@@ -465,9 +468,8 @@ body {
 .subscribe-button {
   box-sizing: border-box;
   width: 100%;
-  height: 48px;
   background-color: #b59f5b;
-  padding: 18px;
+  padding: 16px;
   border: 0;
   font-size: 14px;
   text-transform: uppercase;
@@ -490,17 +492,17 @@ body {
 .tags-list {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
+  padding: 0;
+  margin: 19px 0 0;
 }
 
 .tag {
   list-style-type: none;
   border: 3px solid #f4f3f1;
-  padding: 8px 13px;
+  padding: 4px 14px;
   text-transform: uppercase;
-  margin-right: 6px;
-  margin-bottom: 6px;
+  margin-right: 5px;
+  margin-bottom: 5px;
   font-size: 12px;
   font-weight: 700;
 }
@@ -527,7 +529,7 @@ body {
 
 .category {
   list-style-type: none;
-  padding-bottom: 18px;
+  padding-bottom: 7px;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -570,7 +572,7 @@ body {
   content: "";
   display: block;
   width: 66px;
-  margin: 14px auto 0;
+  margin: 7px auto 0;
   border-bottom: 3px solid #b59f5b;
 }
 
@@ -606,8 +608,8 @@ body {
   outline-offset: 24px;
   margin-top: -10px;
    width: 100%; */
-  margin-top: -29px;
-  padding: 20px;
+  margin-top: -33px;
+  padding: 25px 20px;
   border: 3px solid #b59f5b;
   flex-grow: 1;
 }
@@ -615,10 +617,18 @@ body {
 /*.shop-item__content {
    min-height: 200px;
 }  */
-
+.shop-item__title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 0;
+}
 
 .shop-item__discription {
   font-size: 15px;
+  margin-top: 0;
+  margin-bottom: 23px;
+  line-height: 1.5em;
 }
 
 .shop-item__link {
@@ -639,6 +649,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 .shop-item__price {
@@ -672,6 +683,7 @@ body {
   background-color: #f4f7f6;
   padding: 30px 0;
   list-style-type: none;
+  margin-top: 65px;
 }
 
 .socials-link {
@@ -701,7 +713,7 @@ body {
 
 .copyrights {
   text-align: center;
-  margin-top: 74px;
+  margin-top: 70px;
   margin-bottom: 40px;
   font-size: 12px;
   font-weight: 700;
