планшетная и мобильная верстка по пиксель перфекту

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ body {
   font-family: OpenSans, Arial, sans-serif;
 }
 
-
+p {
+  margin: 0;
+}
 
 
 
@@ -249,10 +251,8 @@ body {
 
 
 .post-list {
-
   display: flex;
   flex-direction: column;
-  gap: 55px;
 }
 
 .post {
@@ -260,11 +260,13 @@ body {
   gap: 30px;
 }
 
+.post:nth-child(n + 2) {
+  margin-top: 55px;
+}
+
 .post-picture {
   margin: 0;
 }
-
-
 
 .post-tags {
   display: flex;
@@ -572,7 +574,7 @@ body {
   content: "";
   display: block;
   width: 66px;
-  margin: 7px auto 0;
+  margin: 7px auto 7px;
   border-bottom: 3px solid #b59f5b;
 }
 
@@ -589,7 +591,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: calc(100% / 3 - 44px);
-  margin-top: 28px;
+  margin-top: 25px;
 }
 
 .shop-item:nth-of-type(n + 2) {
@@ -608,8 +610,8 @@ body {
   outline-offset: 24px;
   margin-top: -10px;
    width: 100%; */
-  margin-top: -33px;
-  padding: 25px 20px;
+  margin-top: -35px;
+  padding: 25px 19px;
   border: 3px solid #b59f5b;
   flex-grow: 1;
 }
@@ -939,7 +941,7 @@ body {
     font-size: 27px;
   }
   .container{
-    padding: 35px;
+    padding: 0 35px;
   }
 
 
@@ -947,6 +949,15 @@ body {
   /* Header */
   .header {
     background-image: url(../images/banner-bg-tablet.jpg);
+    padding-top: 0;
+  }
+
+  .header-nav {
+    padding-top: 42px;
+  }
+
+  .logo {
+    width: 53%;
   }
   
   .nav__button {
@@ -994,31 +1005,52 @@ body {
   .nav-list {
     display: none;
   }
+  .header-intro {
+    margin: auto;
+    padding: 86px 0 111px;
+  }
 
   .header-title {
     font-size: 40px;
     line-height: 1.4em;
+    max-width: 620px;
+    margin: 0 auto;
   }
 
   /* тренды */ 
   .trends-title {
     text-transform: uppercase;
     font-size: 18px;
+    margin-top: 45px;
+    margin-bottom: 8px;
   }
 
   .trend-card {
     width: calc((100% - 5px) / 2);
+    min-height: 247px;
   }
   .trend-card-title {
     font-size: 17px;
     line-height: 1.3em;
   }
 
+  .trend-content {
+    padding: 29px 30px;
+    margin-left: 20px;
+    margin-right: 19px;
+    margin-bottom: 16px;
+  }
+  .trend-tags {
+    gap: 19px;
+    margin-bottom: 7px;
+  }
   /* контент с постами и sidebar */
 
-  /*.content {
-    justify-content: start;
-  } */
+  .content {
+    margin-top: 47px;
+    margin-bottom: 42px;
+  }
+
   .main {
     width: calc(100% - 272px);
     
@@ -1028,21 +1060,66 @@ body {
     margin-left: 35px;
   }
 
+  .sidebar-data {
+    line-height: 14px;
+  }
+
+
+
   .post {
     flex-direction: column;
+    gap: 8px;
+    border-bottom: 3px solid #eeeeee;
+  }
+  .post:nth-child(n + 2) {
+    margin-top: 43px;
+  }
+
+  .post-tags {
+    gap: 19px;
   }
 
   .post-title {
     font-size: 17px;
+    margin-top: 8px;
+    margin-bottom: 30px;
+  }
+
+  .data-author {
+    margin-bottom: 27px;
+    gap: 6px;
+  }
+
+  .post-text {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   .picture {
     width: 100%;
   }
-  /* Наши изделия */
+  .latest-post {
+    margin-top: 22px;
+  }
+  .categories-list {
+    margin-top: 13px;
+  }
 
+  .category:nth-child(n + 2) {
+    padding-top: 11px;
+}
+  .category {
+    padding-bottom: 12px;
+  }
+  
+  /* Наши изделия */
+  .shop-items-title {
+    font-size: 18px;
+  }
   .shop-item {
-    width: calc(47%);
+    width: calc(48%);
   }
 
   .shop-item:nth-of-type(n + 2) {
@@ -1050,13 +1127,20 @@ body {
   }
 
   .shop-item:nth-of-type(2n) {
-    margin-left: 3%;
+    margin-left: 2%;
   }
 
   .shop-item__picture {
     width: calc(100% - 40px);
   }
 
+  .socials {
+    margin-top: 38px;
+  }
+
+  .copyrights {
+    margin-top: 45px;
+  }
 }
 
 @media (max-width: 640px) {
@@ -1065,6 +1149,7 @@ body {
   .popup__container {
     max-width: 390px;
   }
+
   .popup__title {
     font-size: 16px;
   }
@@ -1095,7 +1180,7 @@ body {
   }
 
   .logo {
-    width: 100%;
+    width: 75vw;
   }
 
   .nav__button {
@@ -1145,8 +1230,8 @@ body {
   }
 
   .header-intro {
-    margin-top: 40px;
-    padding: 0;
+    margin-top: 14px;
+    padding: 16px 0;
   }
 
   .header-title {
@@ -1159,14 +1244,20 @@ body {
   .trends-title {
     text-transform: uppercase;
     font-size: 16px;
+    margin-top: 38px;
   }
 
   .trend-card {
     width: 100%;
+    min-height: 230px;
   }
   .trend-content {
-    padding-left: 22px;
-    padding-right: 22px;
+    padding: 26px 20px;
+    margin: 15px;
+  }
+
+  .trend-tags {
+    gap: 19px;
   }
   .trend-card-title {
     font-size: 16px;
@@ -1177,6 +1268,8 @@ body {
     
   .content {
     flex-wrap: wrap;
+    margin-top: 40px;
+    margin-bottom: 27px;
   }
 
   .main {
@@ -1186,24 +1279,71 @@ body {
   .sidebar {
     width: 100%;
     margin-left: 0;
+    gap: 38px;
+    margin-top: 38px;
   }
 
-  .latest-posts-list {
-    width: 100%;
-  }
 
   .post-title {
-    font-size: 17px;
+    font-size: 16px;
+    line-height: 1.25em;
+    margin-bottom: 18px;
   }
   .post {
     flex-direction: column;
+    gap: 9px;
+    border-bottom: 3px solid #eeeeee;
   }
+  .post:nth-child(n + 2) {
+    margin-top: 35px;
+  }
+
+  .post-tags {
+    gap: 19px;
+    margin-bottom: 9px;
+    line-height: 1em;
+  }
+
   .picture {
     width: 100%;
   }
 
+  .data-author {
+    margin-bottom: 15px;
+  }
+
+  .post-text {
+    font-size: 14px;
+    line-height: 1.4em;
+    margin-bottom: 21px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  .aside-title {
+    font-size: 16px;
+  }
+  .latest-posts-list {
+    width: 100%;
+  }
+  .latest-post {
+    margin-top: 23px;
+  }
+  .form-search {
+    margin-top: 58px;
+  }
+
+  .tag {
+    padding: 5px 12px 4px 12px;
+  }
+
+  .shop-items-title {
+    font-size: 16px;
+  }
+
   .shop-item {
     width: 100%;
+    margin-top: 22px;
   }
 
   .shop-item:nth-of-type(n + 2) {
@@ -1214,8 +1354,28 @@ body {
     margin-left: 0;
   }
 
+  .shop-item__body {
+    padding: 30px 19px;
+  }
+  .shop-item__title {
+    font-size: 16px;
+  }
+
   .shop-item__picture {
-    width: calc(100% - 40px);
+    width: calc(100% - 45px);
+  }
+  .socials {
+    margin-top: 38px;
+  }
+
+  .copyrights {
+    margin-top: 45px;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 640px) {
+  .trend-card {
+    width: calc((100% - 5px) / 2);
   }
 
 }
